--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,8 @@
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "friendsofsymfony/user-bundle": "^1.3",
         "incenteev/composer-parameter-handler": "~2.0",
-        "javiereguiluz/easyadmin-bundle": "^1.16",
         "liuggio/excelbundle": "^2.1",
-        "raulfraile/ladybug-bundle": "^1.0",
+        "phpoffice/phpword": "^0.14.0",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.0.2",
