--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,8 +2,10 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
-    - { resource: "@CombBundle/Resources/config/services.yml" }
+    - { resource: "@AppBundle/Resources/config/services.xml" }
     - { resource: "@NomencladorBundle/Resources/config/services.yml" }
+    - { resource: "@CombBundle/Resources/config/services.xml" }
+    - { resource: "@ReporteBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
