[New] Generando bundle para gestión de reportes
 - Desarrollando primer reporte asociado a solicitudes de transporte

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -18,6 +18,11 @@ comb:
     type:     annotation
     prefix:   /
 
+reporte:
+    resource: "@ReporteBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
