--- a/src/ReporteBundle/Resources/config/services.yml
+++ b/src/ReporteBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    comb.example:
-#        class: CombBundle\Example
+#    reporte.example:
+#        class: ReporteBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
