[DELETE] Removiendo bundle Reporte (Innecesario)
 - Añadiendo a archivo config referencia a servicio de managers en CombBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,7 +5,7 @@ imports:
     - { resource: "@AppBundle/Resources/config/services.xml" }
     - { resource: "@NomencladorBundle/Resources/config/services.yml" }
     - { resource: "@CombBundle/Resources/config/services.xml" }
-    - { resource: "@ReporteBundle/Resources/config/services.yml" }
+    - { resource: "@CombBundle/Resources/config/managers.xml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
